--- a/news/templates/news/register.html
+++ b/news/templates/news/register.html
@@ -13,7 +13,12 @@
 	<form method="post" >
 		{% csrf_token %}
 
-		{{ form.as_p}}
+		<!--{{ form.as_p}}-->
+
+		{% for f in form %}
+			<p><label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}</label>{{ f }}</p>
+			<div class="form-error">{{ f.errors }}</div>
+		{% endfor %}
 
 		<button type="submit" class="btn btn-primary btn-block">Регистрация</button>
 
